--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.482.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
