--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "dhindu-user-admin",
+  "name": "fizzy-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.0.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/x-date-pickers": "^8.12.0",
+    "@mui/x-date-pickers-pro": "^8.12.0",
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.18",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.482.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-date-range": "^2.0.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
+    "rsuite": "^5.83.3",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "scripts": {
@@ -48,11 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.3.3"
   }
 }
