--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.0.2",
+    "@mui/x-data-grid": "^8.13.1",
     "@mui/x-date-pickers": "^8.12.0",
     "@mui/x-date-pickers-pro": "^8.12.0",
     "axios": "^1.8.4",
